# fast_zero

./: .dockerignore  .gitignore  .python-version  Dockerfile  README.md  alembic.ini  checkpoint.crt  compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml  pipeline.yml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: README  env.py
migrations/versions/: 26e2c130757b_add_updated_at_and_created_at_table_todo.py  4117c15a00c3_create_users_table.py  48173a60ec30_create_users_table.py  a469c0600813_create_todos_table.py  a97e52be9fc5_create_updated_at_in_user_table.py  b60b1875ba73_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_todos.py  test_users.py
